# c-jogo

./: CMakeLists.txt  Makefile  jogo.ui
include/: jogo.hpp  minhajogojanela.hpp  perguntas.hpp  utils.hpp
src/: jogo.cpp  main.cpp  minhajogojanela.cpp  perguntas.cpp  utils.cpp
